♻ Renaming package to 'task_organizer'

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: nosso_primeiro_projeto
+name: task_organizer
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
