--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.nosso_primeiro_projeto">
+    package="com.example.task_organizer">
    <application
-        android:label="nosso_primeiro_projeto"
+        android:label="task_organizer"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
